Sun Dec 31 16:40:41 1995  Peter Chubb  <peterc@bookworm.sw.oz.au>
			  and Jim Kingdon  <kingdon@cyclic.com>

	* admin.c (admin_fileproc): Call freevers_ts before returning.

Mon Dec 25 12:20:06 1995  Peter Wemm  <peter@haywire.DIALix.COM>

	* logmsg.c (rcsinfo_proc): initialise line and
	line_chars_allocated so they dont cause malloc problems within
	getline().  This was causing rcsinfo templates to not work.

Sun Dec 24 01:38:36 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * server.c (authenticate_connection): clarify protocol.

        * login.c (login): deprolixify the password prompt.

Sat Dec 23 10:46:41 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* myndbm.h, myndbm.c (dbm_store): New function.
	* myndbm.h (DBM): Add modified and filename fields.
	* myndbm.c (dbm_open, dbm_close): Manipulate new fields.  dbm_open
	no longer fails if the file doesn't exist and O_CREAT is set.
	* cvs.h (CVSROOTADM_VALTAGS): Added.
	* tag.c, cvs.h (tag_check_valid): New function.
	* update.c (update), checkout.c (checkout_proc), commit.c (commit),
	diff.c (diff), patch.c (patch_proc), rtag.c (rtag_proc), tag.c (tag):
	Call it.
	* sanity.sh: Test for rejection of invalid tagname.

Fri Dec 22 18:21:39 1995  Karl Fogel  <kfogel@csxt.cs.oberlin.edu>

        * client.c (start_server): don't use kerberos if authenticating
        server was specified.

Fri Dec 22 16:35:57 1995  Karl Fogel  <kfogel@csxt.cs.oberlin.edu>

        * login.c (login): deal with new scramble methods.
        (get_cvs_password): same.

        * server.c (check_repository_password): remove arbitrary limit on
        line length.
        (authenticate_connection): use a separate variable for the
        descrambled password, now that we no longer scramble in place.
        Set `error_use_protocol' to 1 and just use error() where used to
        do its job inline.

        * cvs.h (scramble, descramble): adjust prototype.

        * scramble.c (scramble, descramble): return char *.
